--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
 </head>
 <body>
 
-    <!-- <form action="">
-        <input type="text" name="github_user" placeholder="Enter Ur github name"/>
-       <input type="text" name="lastName" placeholder="lastName" /> -->
-        <!-- <button type="button" class="my-btn">Save data</button>
-    </form> -->
-    <header>Welcome to the Starwars fan-club! I hate this media franchise, but I'm forced to mimic I love it 😂 </header>
 
-    <div class="main">
-    <nav>
-        <ul>
-        <h4>Categories:</h4>
-        <li><div class="people">Characters</div></li>
-        <li><div class="planets">Planets</div></li>
-        <li><div class="starships">Starships</div></li>
-        <!-- <li><div class="vehicles">Movies</div></li> -->
-    </ul>
-    </nav>
+    <header id="header">
+        <a href="#footer"><img class="ankor down" src="./img/arrow_down.png" alt=""></a> 
 
- 
+        <nav>
+            <ul>
+            <li><div class="people">Characters</div></li>
+            <li><div class="planets">Planets</div></li>
+            <li><div class="starships">Starships</div></li>
+            </ul>
+        </nav>
+        <strong>Welcome to the Starwars fan-club! I hate this media franchise, but I'm forced to mimic I love it 😂</strong>
+    </header>
+    <div class="main">  
+       
 
+   
+
+    <div class="auxflex">
     <div class="content">
         <div class="container_content"></div>
         <div class="pagination">
@@ -35,15 +34,25 @@
         <button type="button">Load more</button>
     </div>
         <div class="pagination_pages"></div>
-    
+
     </div>
     </div>
+    <div class="desc"></div>
+    </div>  
+
     </div>
+    <a href="#header"><img class="ankor up" src="./img/arrow_up.png" alt=""></a>
+
+    <footer id="footer">
+
+        <div><a href="https://github.com/tolieck89">©Tolieck 2025</a></div>
+        <div>Homework with API</div>
+        <div><b>I hate Starwars!</b></div>
+    </footer >
 
 
 
-<!-- </div>
-    <script src="./database.js"></script> -->
+
     <script src="./starwars.js"></script>
 </body>
 </html>
