minor fix of text content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Starwars</title>
+    <title>🤬  I hate Starwars</title>
 </head>
 <body>
 
@@ -46,7 +46,7 @@
     <footer id="footer">
 
         <div><a href="https://github.com/tolieck89">©Tolieck 2025</a></div>
-        <div>Homework with API</div>
+        <div>API homework</div>
         <div><b>I hate Starwars!</b></div>
     </footer >
 
