--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>🤬 I hate Starwars</title>
+    <!-- <link rel="stylesheet" href="./styles.css"> -->
+    <title>🤬  I hate Starwars</title>
 </head>
 <body>
 
@@ -53,6 +53,6 @@
 
 
 
-    <script src="./starwars.js"></script>
+    <!-- <script src="./starwars.js"></script> -->
 </body>
 </html>
