--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./styles.css"> -->
-    <title>🤬  I hate Starwars</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>😍 I love Rick and Morty</title>
 </head>
 <body>
 
@@ -14,17 +14,15 @@
 
         <nav>
             <ul>
-            <li><div class="people">Characters</div></li>
-            <li><div class="planets">Planets</div></li>
-            <li><div class="starships">Starships</div></li>
+            <li><div class="character">Characters</div></li>
+            <li><div class="location">Location</div></li>
+            <li><div class="episode">Episode</div></li>
             </ul>
         </nav>
-        <strong>Welcome to the Starwars fan-club! I hate this media franchise, but I'm forced to mimic I love it 😂</strong>
+        <strong>Welcome to the fan page of Rick and Morty😂</strong>
     </header>
     <div class="main">  
-       
-
-   
+     
 
     <div class="auxflex">
     <div class="content">
@@ -46,13 +44,13 @@
     <footer id="footer">
 
         <div><a href="https://github.com/tolieck89">©Tolieck 2025</a></div>
-        <div>API homework</div>
+        <div>API homework - async/await</div>
         <div><b>I hate Starwars!</b></div>
     </footer >
 
 
 
 
-    <!-- <script src="./starwars.js"></script> -->
+    <script src="./RickAndMorty.js"></script>
 </body>
 </html>
